--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Chad Eddington</a>
+            <a class="navbar-brand" href="#/">E & S Solutions</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -57,7 +57,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-star-empty"></span> Designed by Chad Eddington</p>
+        <p><span style="font-size:16px"class="glyphicon glyphicon-star-empty"></span> Designed by Chad Eddington</p>
       </div>
     </div>
 
